// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules/MaterialKanaTxt default 1`] = `
<p
  className="makeStyles-root-210 makeStyles-root-211 makeStyles-root-208"
>
  <span
    className="makeStyles-kimariji-209"
  >
    あ
  </span>
  きのたの かりほのいおの とまをあらみ
  <br />
  わがころもでは きりにぬれつつ
</p>
`;

exports[`Storyshots molecules/MaterialKanaTxt with custom separate 1`] = `
<p
  className="makeStyles-root-230 makeStyles-root-231 makeStyles-root-228"
>
  <span
    className="makeStyles-kimariji-229"
  >
    あ
  </span>
  きのたの かりほのいおの とまをあらみ
   
  わがころもでは きりにぬれつつ
</p>
`;

exports[`Storyshots molecules/MaterialKanaTxt with kimariji over  1`] = `
<p
  className="makeStyles-root-226 makeStyles-root-227 makeStyles-root-224"
>
  <span
    className="makeStyles-kimariji-225"
  >
    あきのたの か
  </span>
  りほのいおの とまをあらみ
  <br />
  わがころもでは きりにぬれつつ
</p>
`;

exports[`Storyshots molecules/MaterialKanaTxt with size l 1`] = `
<p
  className="makeStyles-root-222 makeStyles-root-223 makeStyles-root-220"
>
  <span
    className="makeStyles-kimariji-221"
  >
    あ
  </span>
  きのたの かりほのいおの とまをあらみ
  <br />
  わがころもでは きりにぬれつつ
</p>
`;

exports[`Storyshots molecules/MaterialKanaTxt with size m 1`] = `
<p
  className="makeStyles-root-218 makeStyles-root-219 makeStyles-root-216"
>
  <span
    className="makeStyles-kimariji-217"
  >
    あ
  </span>
  きのたの かりほのいおの とまをあらみ
  <br />
  わがころもでは きりにぬれつつ
</p>
`;

exports[`Storyshots molecules/MaterialKanaTxt with size s 1`] = `
<p
  className="makeStyles-root-214 makeStyles-root-215 makeStyles-root-212"
>
  <span
    className="makeStyles-kimariji-213"
  >
    あ
  </span>
  きのたの かりほのいおの とまをあらみ
  <br />
  わがころもでは きりにぬれつつ
</p>
`;
